# HOBIT

./: .gitignore  Bayes_opt.ipynb  README.md  pyproject.toml  requirements.txt  setup.py  sin_optimization.ipynb
.github/workflows/: publish.yml
.ipynb_checkpoints/: hybrid_method-checkpoint.ipynb  scipy_and_GradientDescent-checkpoint.ipynb
HOBIT/: HOBIT.py  __init__.py
HOBIT.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
HybridCosFit/: HybridCosFit.py  __init__.py
HybridSinCosFit/: __init__.py
notebooks/: hybrid_method.ipynb  hybrid_method_Cos.ipynb  hybrid_method_Sin.ipynb  only_hyperopt.ipynb  scipy_and_GradientDescent.ipynb
notebooks/.ipynb_checkpoints/: only_hyperopt-checkpoint.ipynb
test_scripts/: hybrid_method_cos.py  hybrid_method_sin.py  only_optuna.py  scipy_and_gradient_descent.py
